@@ -1,16 +1,20 @@
 package weatherproject.tgbotservice.clients;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 import weatherproject.tgbotservice.dto.UserDTO;
-
-import java.util.List;
-
-import org.springframework.http.ResponseEntity;
 import weatherproject.tgbotservice.telegram.UserState;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+
 @Service
+@Slf4j
 public class UserServiceClient {
 
     private final RestTemplate restTemplate;
@@ -24,19 +28,37 @@ public class UserServiceClient {
     }
 
     public List<UserDTO> getAllUsers() {
-        ResponseEntity<UserDTO[]> response = restTemplate.getForEntity(baseUrl, UserDTO[].class);
-        return List.of(response.getBody());
+        try {
+            ResponseEntity<UserDTO[]> response = restTemplate.getForEntity(baseUrl, UserDTO[].class);
+            return List.of(response.getBody());
+        } catch (NullPointerException | RestClientException e) {
+            log.error("Произошла ошибка при обращении к UserService: {}", e.getMessage());
+            return Collections.emptyList();
+        } catch (RuntimeException e) {
+            log.error("Ошибка при выполнении: {}", e.getMessage());
+            return Collections.emptyList();
+        }
     }
 
     public UserDTO getUserById(Long id) {
         String url = baseUrl + "/id/" + id;
-        return restTemplate.getForObject(url, UserDTO.class);
+        try {
+            return restTemplate.getForObject(url, UserDTO.class);
+        } catch (RestClientException e) {
+            log.error("Произошла ошибка при обращении к UserService: сервер недоступен.");
+            return null;
+        }
     }
 
     public List<UserDTO> getUsersByCity(String city) {
-        String url = baseUrl + "/city/" + city;
-        ResponseEntity<UserDTO[]> response = restTemplate.getForEntity(url, UserDTO[].class);
-        return List.of(response.getBody());
+        String url = baseUrl + "/city/" + city.replace(" ", "-");
+        try {
+            ResponseEntity<UserDTO[]> response = restTemplate.getForEntity(url, UserDTO[].class);
+            return List.of(Objects.requireNonNull(response.getBody()));
+        } catch (RestClientException | NullPointerException e) {
+            log.error("Вернулся пустой список: {}", e.getMessage());
+            return Collections.emptyList();
+        }
     }
 
     public void createOrUpdateUser(UserDTO userDTO) {
@@ -50,6 +72,11 @@ public class UserServiceClient {
 
     public void deleteUser(Long id) {
         String url = baseUrl + "/" + id;
-        restTemplate.delete(url);
+        try {
+            restTemplate.delete(url);
+
+        } catch (RestClientException e) {
+            log.error(e.getMessage());
+        }
     }
 }
